+ user logout, user tickets password , fix ui

--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -511,6 +511,27 @@
         </div>
     </div>
 
+    <!-- Modal Logout -->
+    <div class="modal fade" id="modal-logout" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title">خروج</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6 class="title-mini">از حساب کاربری خود خارج می‌شوید؟</h6>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">خیر</button>
+                    <button type="button" class="btn btn-primary">بله</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
 
     <!-- Scripts -->
