--- a/user-password.html
+++ b/user-password.html
@@ -165,7 +165,7 @@
                                             class="fi fi-rr-clipboard-list-check"></i>لیست نسخه‌ها</a></li>
                                 <li class="menu-item"><a href="user-address.html" class="btn-collape"><i
                                             class="fi fi-rr-marker"></i>آدرس‌ها</a></li>
-                                <li class="menu-item active"><a href="user-profile.html" class="btn-collape"><i
+                                <li class="menu-item"><a href="user-profile.html" class="btn-collape"><i
                                             class="fi fi-rr-user"></i>حساب کاربری</a></li>
                                 <li class="menu-item">
                                     <a href="user-tickets.html" class="btn-collape">
@@ -177,7 +177,7 @@
                                         </span>
                                     </a>
                                 </li>
-                                <li class="menu-item"><a href="user-password.html" class="btn-collape"><i
+                                <li class="menu-item active"><a href="user-password.html" class="btn-collape"><i
                                             class="fi fi-rr-lock"></i>تغییر رمز عبور</a></li>
                                 <li class="menu-item">
                                     <a href="#" class="btn-collape" data-bs-toggle="modal"
@@ -199,78 +199,37 @@
                                 <button type="button" class="btn-usermenu"><i
                                         class="fi fi-rr-menu-dots-vertical"></i></button>
                                 <div class="icon">
-                                    <i class="fi fi-rr-user"></i>
+                                    <i class="fi fi-rr-lock"></i>
                                 </div>
-                                <h3>حساب کاربری</h3>
+                                <h3>تغییر رمز عبور</h3>
                             </div>
                         </div>
                         <div class="main-body">
                             <div class="form-content">
                                 <form action="">
                                     <div class="row">
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <div class="col-lg-7">
                                             <div class="inputgroup">
-                                                <input type="text" class="input" placeholder="نام" required>
-                                                <label>نام</label>
-                                                <div class="icon"><i class="fi fi-rr-pencil"></i></div>
+                                                <input type="password" class="input" placeholder="رمز عبور قبلی"
+                                                    required>
+                                                <label>رمز عبور قبلی</label>
+                                                <div class="icon"><i class="fi fi-rr-lock"></i></div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <div class="col-lg-7">
                                             <div class="inputgroup">
-                                                <input type="text" class="input" placeholder="نام خانوادگی" required>
-                                                <label>نام خانوادگی</label>
-                                                <div class="icon"><i class="fi fi-rr-pencil"></i></div>
+                                                <input type="password" class="input" placeholder="رمز عبور جدید"
+                                                    required>
+                                                <label>رمز عبور جدید</label>
+                                                <div class="icon"><i class="fi fi-rr-lock"></i></div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
-                                            <div class="select-group">
-                                                <label>جنسیت</label>
-                                                <select class="form-select">
-                                                    <option value="0" selected disabled>یک مورد را انتخاب کنید</option>
-                                                    <option value="1">زن</option>
-                                                    <option value="2">مرد</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <div class="col-lg-7">
                                             <div class="inputgroup">
-                                                <input type="text" class="input" placeholder="شماره همراه" required>
-                                                <label>شماره همراه</label>
-                                                <div class="icon"><i class="fi fi-rr-phone-call"></i></div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
-                                            <div class="select-group">
-                                                <label>استان</label>
-                                                <select class="form-select">
-                                                    <option value="0" selected disabled>یک مورد را انتخاب کنید</option>
-                                                    <option value="1">قزوین</option>
-                                                    <option value="2">اهواز</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
-                                            <div class="select-group">
-                                                <label>شهر</label>
-                                                <select class="form-select">
-                                                    <option value="0" selected disabled>یک مورد را انتخاب کنید</option>
-                                                    <option value="1">الوند</option>
-                                                    <option value="2">تاکستان</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
-                                            <div class="inputgroup">
-                                                <input type="number" class="input" placeholder="کد ملی" required>
-                                                <label>کد ملی</label>
-                                                <div class="icon"><i class="fi fi-rr-subtitles"></i></div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6">
-                                            <div class="inputgroup">
-                                                <input type="email" class="input" placeholder="آدرس ایمیل" required>
-                                                <label>آدرس ایمیل</label>
-                                                <div class="icon"><i class="fi fi-rr-envelope"></i></div>
+                                                <input type="password" class="input" placeholder="تکرار رمز عبور جدید"
+                                                    required>
+                                                <label>تکرار رمز عبور جدید</label>
+                                                <div class="icon"><i class="fi fi-rr-lock"></i></div>
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
