--- a/user-tickets.html
+++ b/user-tickets.html
@@ -222,7 +222,7 @@
                             </div>
 
                             <!-- وقتی پیامی دریافت کرد -->
-                            <div class="comment">
+                            <div class="card-ticket">
                                 <div class="comment-inner">
                                     <div class="info">
                                         <div class="subject">عنوان پیام</div>
@@ -236,7 +236,7 @@
                                             سطرآنچنان که
                                             لازم است، و برای شرایط </p>
                                     </div>
-                                    <div class="comment reply">
+                                    <div class="card-ticket reply">
                                         <div class="comment-inner">
                                             <div class="info">
                                                 <div class="subject">مدیر سایت</div>
@@ -253,7 +253,7 @@
                                     <div class="satus info"><span>در حال بررسی</span></div>
                                 </div>
                             </div>
-                            <div class="comment">
+                            <div class="card-ticket">
                                 <div class="comment-inner">
                                     <div class="info">
                                         <div class="subject">عنوان پیام</div>
